# audiodecoder.openmpt

./: .travis.yml  CMakeLists.txt  FindOpenmpt.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.openmpt/: addon.xml  addon.xml.in
audiodecoder.openmpt/resources/language/resource.language.af_za/: strings.po
audiodecoder.openmpt/resources/language/resource.language.am_et/: strings.po
audiodecoder.openmpt/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.openmpt/resources/language/resource.language.ast_es/: strings.po
audiodecoder.openmpt/resources/language/resource.language.az_az/: strings.po
audiodecoder.openmpt/resources/language/resource.language.be_by/: strings.po
audiodecoder.openmpt/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.openmpt/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.openmpt/resources/language/resource.language.ca_es/: strings.po
audiodecoder.openmpt/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.openmpt/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.openmpt/resources/language/resource.language.da_dk/: strings.po
debian/: changelog.in  control  copyright  rules
depends/common/openmpt/: 0001-fix-android.patch  CMakeLists.txt  openmpt.sha256  openmpt.txt
depends/windows/openmpt/: 02-fix-win-uwp-build.patch  CMakeLists.txt  openmpt.sha256  openmpt.txt
src/: OpenMptCodec.cpp  OpenMptCodec.h
(+68 files in other folders)
